<resources>
    <string name="app_name">My Movies</string>
    <string name="search_title_hint">Title</string>
    <string name="search_year_hint">Year</string>
    <string name="form_button">Search</string>
    <string name="card_title_hint">Title</string>
    <string name="card_vote_average_hint">Rating</string>
    <string name="card_overview_hint">Overview goes here...</string>
    <string name="form_title_hint">Movie Title</string>
    <string name="form_year_hint">Year</string>

    <!-- TheMovieDB API -->
    <string name="API_KEY" translatable="false">
        cac0b89ef7b5aa3a980f240f7c20af68
    </string>
    <string name="API_JSON_URL" translatable="false">
        http://api.themoviedb.org/3/
    </string>
    <string name="API_IMAGES_URL" translatable="false">
        http://image.tmdb.org/t/p/w500
    </string>
    <string name="MY_TAG" translatable="false">
        com.mobileappsco.training.mymovies
    </string>
    <bool name="debug">true</bool>

    <!-- YouTube API -->
    <string name="YOUTUBE_API_KEY" translatable="false">
        4921591333-e0f080ap66lo83jt97dnkdtooji80d0q.apps.googleusercontent.com
    </string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="card_id_hint">Card ID</string>
    <string name="language">en</string>
    <string name="original_title">Original Title:</string>
    <string name="overview">Overview:</string>
    <string name="release_date">Release Date:</string>
    <string name="trailer">Trailer:</string>
    <string name="favorites">Favorites</string>
    <string name="save_favorite">Add to Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="menu_popular">Popular Now</string>
    <string name="menu_upcoming">Coming Soon</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="delete_favorite">Remove from Favorites</string>
    <string name="reviews">Reviews:</string>
    <string name="reviews_hint">No reviews at the moment</string>
    <string name="detail_review_author">Autor:</string>
    <string name="detaul_review_content">Comment:</string>
    <string name="detail_review_content">Review content goes here...</string>
    <string name="APP_ID" translatable="false">com.mobileappsco.training.mymovies</string>

</resources>
