<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_gravity="center_vertical"
    android:background="@android:drawable/gallery_thumb"
    android:padding="5dp"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_id"
            android:hint="@string/card_id_hint"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="250dp"
            android:id="@+id/card_poster"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@android:drawable/ic_menu_gallery"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_title"
                android:hint="@string/card_title_hint"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_vote_average"
                android:hint="@string/card_vote_average_hint"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_overview"
                android:hint="@string/card_overview_hint"
                android:ellipsize="end"
                android:maxLines="5" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>